添加路由，环境配置，axios

--- a/views/reactSSR.ejs
+++ b/views/reactSSR.ejs
@@ -11,7 +11,7 @@
   <div id="app"></div>
 
   
-  <!-- <script src="/public/js/vendor.js"></script> -->
+  <!-- <script src="/public/vendor.js"></script> -->
   <script src="/public/app.js"></script>
 </body>
 </html>
