--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -1,10 +1,12 @@
 .login-content {
   font-size: 0;
   max-width: 400px;
-  margin: 300px auto 0;
+  margin: 0 auto;
+  height: 258px;
   // border: 1px solid #1890ff;
   border-radius: 10px;
   padding: 25px 50px;
+  align-self: center;
   box-shadow: 1px 1px 15px 0 rgba(0,0,0,0.10);
   .login-form-button {
     width: 100%;
